--- a/css/style.css
+++ b/css/style.css
@@ -305,6 +305,8 @@
 .content-form {
     display: flex;
     flex-direction: column;
+    padding-bottom: 56px;
+    border-bottom: 1px solid #F5D581;
 }
 
 .content-form__textarea {
@@ -322,4 +324,60 @@
     line-height: 150%;
     color: #000000;
     opacity: 0.3;
+}
+
+.content-form__input {
+    width: 540px;
+    height: 64px;
+    box-sizing: border-box;
+    padding: 16px 16px 20px 16px;
+    background: #FFFFFF;
+    border: 1px solid #F5D581;
+    border-radius: 8px;
+    margin-bottom: 24px;
+}
+
+.content-form__input::placeholder {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+    opacity: 0.3;
+}
+
+.content-form__input-wrapper {
+    display: flex;
+}
+
+.content-form__button {
+    width: 285px;
+    height: 64px;
+    background: #9F7303;
+    border-radius: 8px;
+    border: none;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 150%;
+    color: #FFFFFF;
+    cursor: pointer;
+    margin-right: 16px;
+}
+
+.content-form__text {
+    display: block;
+    width: 190px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    color: #000000;
+    opacity: 0.7;
+}
+
+.main-footer__comment-wrapper {
+    padding-top: 56px;
+}
+
+.main-footer__comment-list {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
 }
