--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,9 @@
     padding-bottom: 115px;
 }
 
-.main-container__title {
+/* ВИЗИВИГ */
+
+.wysiwyg-wrapper h1 {
     font-weight: 500;
     font-size: 48px;
     line-height: 59px;
@@ -164,7 +166,7 @@
     margin-bottom: 32px;
 }
 
-.main-container__sub-title {
+.wysiwyg-wrapper h2 {
     font-weight: 500;
     font-size: 40px;
     line-height: 49px;
@@ -172,6 +174,17 @@
     margin: 0;
     margin-bottom: 56px;
 }
+
+.wysiwyg-wrapper h3 {
+    font-size: 32px;
+    line-height: 39px;
+    margin-bottom: 34px;
+    color: #9F7303;
+    margin: 0;
+    margin-bottom: 34px;
+}
+
+
 
 .main-container__img-big {
     display: block;
