--- a/css/style.css
+++ b/css/style.css
@@ -156,8 +156,8 @@
     padding-bottom: 115px;
 }
 
-/* ВИЗИВИГ */
 
+/* ВИЗИВИГ */
 .wysiwyg-wrapper h1 {
     font-weight: 500;
     font-size: 48px;
@@ -184,47 +184,39 @@
     margin-bottom: 34px;
 }
 
+.wysiwyg-wrapper p {
+    font-size: 18px;
+    line-height: 150%;
+    margin: 0;
+    margin-bottom: 27px;
+    color: #000000;
+}
 
-
-.main-container__img-big {
+.wysiwyg-wrapper img {
     display: block;
     width: 100%;
     margin-bottom: 56px;
 }
 
-.main-container__text {
-    font-size: 18px;
-    line-height: 150%;
-    margin: 0;
-}
-
-.main-container__text--second-color {
-    color: #9F7303;
-    margin-bottom: 26px;
-}
-
-.main-container__text--main-color {
-    margin-bottom: 27px;
-}
-
-.main-container__list {
+.wysiwyg-wrapper ol,
+.wysiwyg-wrapper ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
     margin-bottom: 56px;
 }
 
-.main-container__list-item {
+.wysiwyg-wrapper li {
     position: relative;
     padding-left: 27px;
     margin-bottom: 8px;
 }
 
-.main-container__list-item:last-child {
+.wysiwyg-wrapper li:last-child {
     margin-bottom: 0;
 }
 
-.main-container__list-item::before {
+.wysiwyg-wrapper li::before {
     position: absolute;
     content: '';
     width: 8px;
@@ -234,6 +226,35 @@
     left: 2px;
     transform: rotate(45deg);
 }
+
+/* Список */
+/* .main-container__list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    margin-bottom: 56px;
+} */
+
+/* .main-container__list-item {
+    position: relative;
+    padding-left: 27px;
+    margin-bottom: 8px;
+} */
+
+/* .main-container__list-item:last-child {
+    margin-bottom: 0;
+} */
+
+/* .main-container__list-item::before {
+    position: absolute;
+    content: '';
+    width: 8px;
+    height: 8px;
+    background-color: #F5D581;
+    top: calc(50% - 4px);
+    left: 2px;
+    transform: rotate(45deg);
+} */
 
 .main-container__img-wrapper {
     display: flex;
