--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,13 @@
     color: #000000;
 }
 
+.wysiwyg-wrapper blockquote {
+    font-style: italic;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 150%;
+}
+
 .wysiwyg-wrapper img {
     display: block;
     width: 100%;
