--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,7 @@
 }
 
 .order-form .wpcf7-text {
-    width: 540px;
+    width: 50%;
     height: 64px;
     box-sizing: border-box;
     padding: 16px 16px 20px 16px;
