--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,13 @@
     display: flex;
 }
 
-.main-header__list {
+/* МЕНЮ  */
+.menu-primary-container {
+    display: flex;
+    align-items: center;
+}
+
+.menu {
     width: 280px;
     display: flex;
     justify-content: space-between;
@@ -61,6 +67,82 @@
     padding: 0;
     list-style-type: none;
 }
+
+.menu a {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-size: 18px;
+    line-height: 22px;
+    color: #000000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.menu-item {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.menu-item-has-children {
+    position: relative;
+    padding-right: 17px;
+}
+
+.menu-item-has-children:hover .sub-menu {
+    display: block;
+}
+
+.menu-item-has-children::before {
+    position: absolute;
+    content: '';
+    width: 13px;
+    height: 9px;
+    background-image: url(../img/arrow-down.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    top: calc(50% - 3px);
+    right: 0;
+    z-index: 1;
+}
+
+.sub-menu {
+    position: absolute;
+    display: none;
+    width: 200px;
+    min-height: 169px;
+    top: 100%;
+    left: 0;
+    box-sizing: border-box;
+    padding: 25px 16px;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 4px rgb(97 97 97 / 18%), 0px 4px 8px rgb(97 97 97 / 18%);
+    box-sizing: border-box;
+    list-style-type: none;
+}
+
+.sub-menu .menu-item {
+    margin-bottom: 23px;
+}
+
+.sub-menu .menu-item:last-child {
+    margin-bottom: 0;
+}
+
+.sub-menu a:hover {
+    color: #9F7303;
+}
+
+
+
+/* .main-header__list {
+    width: 280px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+} */
 
 .main-header__list-item {
     display: flex;
@@ -257,15 +339,6 @@
     left: 2px;
     transform: rotate(45deg);
 }
-
-/* .wp-block-separator {
-    width: 920px;
-    height: 1px;
-    margin: 0 auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    background-color: #F5D581;
-} */
 
 /* Список */
 /* .main-container__list {
